--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 html {
   scroll-behavior: smooth;
   width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -24,6 +25,7 @@ body {
   min-width: 100%;
   min-height: 100vh;
   width: 100%;
+  overflow-x: hidden;
 }
 
 /* Custom scrollbar */
